# stargazing_party

./: LICENSE  designdoc.md  jest.config.cjs  jest.setup.ts  package.json  pnpm-lock.yaml
.github/: copilot-instructions.md
.github/skills/issue-to-plan/: SKILL.md
.github/skills/issue-to-requirement/: SKILL.md
.github/skills/route-contract-behavior-standards/: SKILL.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/_components/: AccommodationCard.tsx  MoonDayButton.tsx  SearchForm.tsx  SearchResults.tsx
src/app/api/prefecture/clear-days/: route.ts
src/app/api/prefecture/clear-days/__tests__/: route.test.ts
src/app/api/search/: route.ts
src/lib/server/: accommodation_search_service.ts  open_metro_api_client.ts  prefecture_geocode.ts  rakuten_travel_hotel_search_api_client.ts  yahoo_reverse_geocoder_api_client.ts
src/lib/server/__tests__/: accommodation_search_service.unit.test.ts  open_metro_api_client.integration.test.ts  open_metro_api_client.unit.test.ts  rakuten_travel_hotel_search_api_client.integration.test.ts  rakuten_travel_hotel_search_api_client.unit.test.ts  yahoo_reverse_geocoder_api_client.integration.test.ts  yahoo_reverse_geocoder_api_client.unit.test.ts
tools/moon_phase_img_maker/: .gitignore  pyproject.toml
tools/moon_phase_img_maker/src/: main.py
